[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Fonts/pixel-bit-advanced.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Menus/StationMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="StationMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 300 )
mouse_filter = 2
color = Color( 0.458824, 0.113725, 0.717647, 0.168627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
anchor_right = 1.0
margin_top = 20.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 1 )
text = "Test Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.0
margin_right = 40.0
margin_bottom = 300.0
rect_min_size = Vector2( 80, 300 )
mouse_filter = 2
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="ColorRect/MainMenu"]
margin_right = 80.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 98 )

[node name="ShipsBtn" type="Button" parent="ColorRect/MainMenu"]
margin_top = 108.0
margin_right = 80.0
margin_bottom = 128.0
text = "Ships"

[node name="WeaponsBtn" type="Button" parent="ColorRect/MainMenu"]
margin_top = 138.0
margin_right = 80.0
margin_bottom = 158.0
text = "Weapons"

[node name="CrewBtn" type="Button" parent="ColorRect/MainMenu"]
margin_top = 168.0
margin_right = 80.0
margin_bottom = 188.0
text = "Crew"

[node name="ResourcesBtn" type="Button" parent="ColorRect/MainMenu"]
margin_top = 198.0
margin_right = 80.0
margin_bottom = 218.0
text = "Resources"

[node name="SecondaryMenu" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.0
margin_right = 40.0
margin_bottom = 300.0
rect_min_size = Vector2( 80, 300 )
mouse_filter = 2
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="ColorRect/SecondaryMenu"]
margin_right = 80.0

[connection signal="button_up" from="ColorRect/MainMenu/ShipsBtn" to="." method="_on_ShipsBtn_button_up"]
[connection signal="item_selected" from="ColorRect/SecondaryMenu/ItemList" to="." method="_on_ItemList_item_selected"]
